--- a/hello-jest-github-actions/src/.github/workflows/jest.yml
+++ b/hello-jest-github-actions/src/.github/workflows/jest.yml
@@ -1,5 +1,9 @@
 name: Jest
-on: push
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 jobs:
   test:
     runs-on: ubuntu-latest
