--- a/.github/workflows/js/hello-jest-github-actions/src/jest.yml
+++ b/.github/workflows/js/hello-jest-github-actions/src/jest.yml
@@ -1,5 +1,9 @@
 name: Jest
-on: push
+on:
+  push:
+    branches: [ dev ]
+  pull_request:
+    branches: [ main ]
 jobs:
   test:
     runs-on: ubuntu-latest
